2.0.3 Fix: support for Vertce's Satchels [#10, #https://github.com/vercte/satchels/issues/14]